-- Script para crear la base de datos asistencias_ubbj en PostgreSQL

-- EJECUTAR SI ES VIA TERMINAL:
--psql -h <host> -p <port> -U <your-user>
--Por defecto, en desarrollo:
--host = localhost
--port = 5432
--el usuario es postgres (root), pero se recomienda crear un usuario para la base de datos

-- CREAR BASE DE DATOS asistencias_ubbj
CREATE DATABASE asistencias_ubbj WITH 
    OWNER = postgres -- Cambiar por el usuario que se quiera usar
    ENCODING = 'UTF8'
    LC_COLLATE = 'en_US.UTF-8'
    LC_CTYPE = 'en_US.UTF-8'
    TABLESPACE = pg_default
    CONNECTION LIMIT = -1; -- Sin límite de conexiones, pero se puede ajustar segun necesidades
-- CONEXION A LA BASE DE DATOS
\c asistencias_ubbj;


-- CREAR TABLAS

-- Para ids autoincrementales, se puede usar SERIAL o IDENTITY
-- SERIAL es más antiguo, IDENTITY es parte del estándar SQL y recomendado en versiones recientes de PostgreSQL
CREATE TABLE roles (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY, -- Ejemplo: id SERIAL PRIMARY KEY,
    name VARCHAR(100) NOT NULL UNIQUE,
    description VARCHAR(255) NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT TRUE
);

-- PostgreSQL crea un index automatico para las PRIMARY KEYs
CREATE TABLE users (
    id VARCHAR(15) PRIMARY KEY,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    password VARCHAR(255) NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,
    role_id INTEGER REFERENCES roles(id) NOT NULL
);

CREATE TABLE signatures (
    id VARCHAR(15) PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description VARCHAR(255), -- Puede ser NULL, no es obligatorio
    is_active BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE careers (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL,
    description VARCHAR(255),
    is_active BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE career_signatures (
    id VARCHAR(15) PRIMARY KEY,
    signature_id VARCHAR(15) REFERENCES signatures(id) NOT NULL,
    career_id INTEGER REFERENCES careers(id) NOT NULL,
    UNIQUE(signature_id, career_id) -- Para evitar duplicados
);

CREATE TABLE academic_cycles (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    cycle_name VARCHAR(100) NOT NULL,
    cycle_year DATE NOT NULL,
);

CREATE TABLE students (
    id VARCHAR(15) PRIMARY KEY,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    enrollment_date DATE NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT TRUE
);

CREATE TABLE groups (
    id VARCHAR(15) PRIMARY KEY,
    name VARCHAR(15) NOT NULL,
    user_id VARCHAR(15) REFERENCES users(id) NOT NULL, -- El profesor a cargo del grupo
    career_signature_id VARCHAR(15) REFERENCES career_signatures(id) NOT NULL,
    academic_cycle_id INTEGER REFERENCES academic_cycles(id) NOT NULL
);

CREATE TABLE schedules (
    id VARCHAR(15) PRIMARY KEY,
    day_of_week SMALLINT NOT NULL, -- Ejemplo: 'Monday', 'Tuesday', etc.
    start_time TIME NOT NULL,
    end_time TIME NOT NULL,
    max_entry_minutes SMALLINT NOT NULL, -- Minutos antes de la hora de inicio para permitir entrada
    minutes_to_be_late SMALLINT NOT NULL, -- Minutos después de la hora de inicio para considerar tarde
    group_id VARCHAR(15) REFERENCES groups(id) NOT NULL
);

CREATE TABLE enrollments (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    enrollment_date DATE NOT NULL,
    student_id VARCHAR(15) REFERENCES students(id) NOT NULL,
    group_id VARCHAR(15) REFERENCES groups(id) NOT NULL,
    UNIQUE(student_id, group_id) -- Para evitar que un estudiante se inscriba dos veces en el mismo grupo
);

CREATE TABLE attendances (
    id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    attendance_date DATE NOT NULL,
    status ENUM('PRESENT', 'ABSENT', 'LATE', 'JUSTIFIED', 'LEFT_EARLY') NOT NULL, -- Ejemplo: 'Present', 'Absent', 'Late'
    notes VARCHAR(255),
    enrollment_id INTEGER REFERENCES enrollments(id) NOT NULL,
    UNIQUE(enrollment_id, attendance_date) -- Para evitar registros duplicados
);